# PIScO_Suite

./: .gitignore  README.md  install.sh  run.sh  todo.md
BackgroundCorrection/: compile.sh  settings.cfg
BackgroundCorrection/src/: correction.cpp  correction.hpp  main.cpp  reader.cpp  reader.hpp  settings.cpp  settings.hpp  writer.cpp  writer.hpp
BackgroundCorrectionModule/: flake.nix
BackgroundCorrectionModule/src/: background_correction.cpp
GenerateCrops/: CMakeLists.txt  flake.nix  input.ini
GenerateCrops/src/: crop_generator.cpp  crop_generator.hpp  main.cpp  reader.cpp  reader.hpp  utils.cpp  utils.hpp
GlobalDataTypes/: README.md
GlobalDataTypes/Error/: error.cpp  error.hpp
GlobalDataTypes/Parser/: parser.cpp  parser.hpp
GlobalDataTypes/segmenterTypes/: segmenterTypes.hpp
ObjectTracking/: CMakeLists.txt  README.md
ObjectTracking/src/: data_loader.cpp  data_loader.hpp  main.cpp  tracking.cpp  tracking.hpp  utils.cpp  utils.hpp
Segmenter/: CMakeLists.txt  README.md  compile.sh  flake.nix  input.ini  test.py
Segmenter/src/: main.cpp  reader.cpp  reader.hpp  segmenter.cpp  segmenter.hpp  settings.cpp  settings.hpp  writer.cpp  writer.hpp
SegmenterParallel/: flake.nix
SegmenterParallel/src/: segmenter.cpp  utils.cpp  utils.hpp  writer.cpp
TBS/: CMakeLists.txt  compile.sh  flake.nix  run.sh
TBS/src/: detection.cpp  detection.hpp  main.cpp  reader.cpp  reader.hpp
Tests/: binary-hashes.nix  correlation_tracking.py  crop_spline.py  default.nix  flake.nix  test_planktwin.py
Tests/LibTorchTest/: CMakeLists.txt  binary-hashes.nix  compile.sh  default.nix  flake.nix  main.cpp
Tests/LibTorchTest/src/: main.cpp
Tests/planktwin/: simulation.py
ThreadManagerModule/: flake.nix
ThreadManagerModule/src/: info.cpp
